<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcomeTopQuiz">Welcome in TopQuizz. What\'s you\'re name ?</string>
    <string name="app_name">TopQuizz</string>
    <string name="question1">Quand a était créé Android ?</string>
    <string name="response11">1999</string>
    <string name="response12">2001</string>
    <string name="response13">2007</string>
    <string name="response14">2010</string>
    <string name="question2">Que permet un fichier layout ?</string>
    <string name="response21">De changer la langue d\'utilisation du téléphone</string>
    <string name="response22">De stocker les préférences de l\'utilisateur</string>
    <string name="response23">D\'organiser l\'affichage des différents éléments graphiques qui seront présentés à l\'utilisateur</string>
    <string name="response24">De configurer le nom de l\'application</string>
    <string name="question3">Quel élément graphique permet d\'afficher du texte dans un layout ?</string>
    <string name="response31">Button</string>
    <string name="response32">TextView</string>
    <string name="response33">Label</string>
    <string name="response34">EditText</string>
    <string name="question4">Quel est l\'attribut XML à utiliser pour ajouter de l\'espace autour d\'un élément graphique (et non à l\'intérieur) ?</string>
    <string name="response41">layout_margin</string>
    <string name="response42">layout_width</string>
    <string name="response43">layout_height</string>
    <string name="response44">gravity</string>
    <string name="question5">Comment s\’appelle la classe Android qui centralise l’ensemble des identifiants de toutes les ressources du projet ?</string>
    <string name="response51">La classe R</string>
    <string name="response52">La classe GlobalResources</string>
    <string name="response53">La classe Activity</string>
    <string name="response54">La classe MainConstants</string>
    <string name="rightAnswer">Bonne réponse !</string>
    <string name="wrongAnswer">Mauvaise réponse !</string>
    <string name="congrats">Bravo!</string>
    <string name="messageScore">"Votre score est de "</string>
    <string name="points">points</string>
    <string name="OKbutton">OK</string>
    <string name="welcome">"Hello, "</string>
    <string name="lastScore">"\nYour best score is "</string>
    <string name="tryAgain">" points, do you want try again ?"</string>
    <string name="enterPseudo">"Please enter a pseudo !"</string>
    <string name="create_account_text">Create an account</string>
    <string name="validate">Validate</string>
    <string name="welcome_text">Welcome to TopQuiz ! What is your name ?</string>
    <string name="username_hint">Username</string>
    <string name="mail_hint">E-mail</string>
    <string name="confirm_mail_hint">Confirm the e-mail</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="login_text">Login</string>
    <string name="connection">Connection</string>
    <string name="login_welcome_text">Welcome to TopQuizz, the FI\'s favourite app to test your general culture !</string>
    <string name="menu_text">What do you want to do?</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="my_account">My account</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="create_quiz">Create a quiz</string>
    <string name="validate_quiz">Validate quizzes</string>
    <string name="answers_title">ANSWERS</string>
    <string name="themes_title">THEMES</string>
    <string name="leaderboard_title">LEADERBOARD</string>
    <string name="general_title">General</string>
    <string name="themes">Themes</string>
    <string name="validate_themes_title">Quiz to validate</string>
    <string name="create_question_title">New question</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="create_theme_mainTitle">Quiz creation</string>
    <string name="theme">Theme</string>
    <string name="AddQuestion">+ Add a question</string>
    <string name="SubmitQuiz">Submit quiz</string>
    <string name="WrongID">Username or Password is incorrect !</string>
    <string name="returnMenu">Return to main menu</string>
</resources>