<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neves.topquiz.controller.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_basic_gradient">

    <TextView
        android:id="@+id/main_menu_mainTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/menu_text"
        android:textColor="@color/colorWhite"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_choices_lt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_menu_choices_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main_menu_chooseTheme_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/container_card"
            android:elevation="8dp"
            android:padding="10dp"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/container_card"
                    app:srcCompat="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/choose_theme"
                    android:textColor="@color/colorRedOrange"
                    android:textSize="24dp" />
            </LinearLayout>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="34dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="2">

            <LinearLayout
                android:id="@+id/main_menu_account_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/container_card"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/container_card"
                    app:srcCompat="@drawable/ic_account"
                    android:tint="@color/colorPrimaryLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/my_account"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_menu_leaderboard_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/container_card"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/container_card"
                    app:srcCompat="@drawable/ic_leaderboard"
                    android:tint="@color/colorTeal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/leaderboard"
                    android:textColor="@color/colorTeal"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_menu_createQuiz_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:background="@drawable/container_card"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/container_card"
                    app:srcCompat="@drawable/ic_create"
                    android:tint="@color/colorYellowDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/create_quiz"
                    android:textColor="@color/colorYellowDark"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_menu_validateQuiz_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@drawable/container_card"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:focusable="true">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/container_card"
                    app:srcCompat="@drawable/ic_tick"
                    android:tint="@color/colorOrangeLight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/validate_quiz"
                    android:textColor="@color/colorOrangeLight"
                    android:textSize="18dp" />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>