<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_basic_gradient"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture_siv"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_marginBottom="40sp"
        android:clickable="true"
        android:elevation="8sp"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/iv_default_profile"
        app:layout_constraintBottom_toTopOf="@+id/profile_form_lt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ProfileAppearanceOverlay" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/profile_nbPoints_lt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture_siv">

        <TextView
            android:id="@+id/profile_nbPoints_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginRight="20sp"
            android:text="2450"
            android:textColor="@color/colorWhite"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/profile_pointsTxt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/points"
            android:textColor="@color/colorWhite"
            android:textSize="34sp" />

    </com.google.android.flexbox.FlexboxLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_form_lt"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="16sp"
        android:background="@drawable/container_semi_card"
        android:elevation="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nbPoints_lt">

        <ImageButton
            android:id="@+id/profile_edit_btn"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_modify" />

        <TextView
            android:id="@+id/profile_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="2sp"
            android:text="@string/username_hint"
            android:textColor="@color/colorHint"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/profile_username_input"
            app:layout_constraintStart_toStartOf="@+id/profile_username_input"/>

        <EditText
            android:id="@+id/profile_username_input"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="74sp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/container_edit_text"
            android:focusable="false"
            android:elevation="8sp"
            android:padding="24sp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorHint"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_mail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="2sp"
            android:text="@string/mail_hint"
            android:textColor="@color/colorHint"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/profile_mail_input"
            app:layout_constraintStart_toStartOf="@+id/profile_mail_input"/>
        <EditText
            android:id="@+id/profile_mail_input"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="48sp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/container_edit_text"
            android:elevation="8sp"
            android:padding="24sp"
            android:focusable="false"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorHint"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_username_input" />

        <TextView
            android:id="@+id/profile_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginBottom="2sp"
            android:text="@string/password_hint"
            android:textColor="@color/colorHint"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@+id/profile_password_input"
            app:layout_constraintStart_toStartOf="@+id/profile_password_input" />
        <EditText
            android:id="@+id/profile_password_input"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32sp"
            android:layout_marginTop="48sp"
            android:layout_marginEnd="32sp"
            android:background="@drawable/container_edit_text"
            android:elevation="8sp"
            android:padding="24sp"
            android:focusable="false"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorHint"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_mail_input"
            android:inputType="textPassword"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>